# goal-misgeneralization

./: .gitignore  README.md  pyproject.toml
configs/: experiments.yaml
rl_version/: README.md  pyproject.toml
rl_version/configs/: experiments.yaml
rl_version/scripts/: generate_data.py  plot_runs.py  run_eval.py  run_train.py
scripts/: eval_game_rl.py  generate_data.py  plot_runs.py  run_causal_trace.py  run_curriculum.py  run_eval.py  run_game_rl.py  run_logit_lens.py  run_probe.py  run_rl_train.py  run_train.py
src/gm_nim/: __init__.py  causal.py  curriculum.py  data.py  games.py  hf.py  interventions.py  logit_lens.py  metrics.py  plotting.py  probes.py  rl.py  rl_games.py  rl_play.py  training.py
tests/: test_core.py
