[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal-misgeneralization-nim-rl"
version = "0.1.0"
description = "RL-first variant of the Nim heuristic-learning reproduction."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.28",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

